--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-Hello ~Dharanish
+<html>
+
+<head>
+    <title>Hello~Hola~Ni hao- Making a website</title>
+    <link rel="stylesheet" , href="style.css">
+</head>
+
+<body>
+    <div class="container">
+        <div class="menu">
+            <ul>
+                <li>Home</li>
+                <li>Projects</li>
+                <li>Media</li>
+                <li>About</li>
+            </ul>
+        </div>
+        <div class="content">
+            <div class="app_text">
+                <h1>
+                    Building a webpage with HTML and CSS
+                </h1>
+                <br>
+                <br>
+                <p>
+                    Getting started:
+                    <br> This is an experiment to see if a simple website can be hosted on Github using simpleHTML and CSS
+                    <br> Steps followed to make the website is to create a html page (The current one I am in) and make it look good
+                    <br> Create HTML, CSS files, and reference the css in the html page
+                    <br> 1. Creating a menu bar
+                    <br> 2. Creating a content section
+                    <br>
+                </p>
+
+            </div>
+        </div>
+
+    </div>
+
+</body>
+
+</html>
