--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Hello~Hola~Ni hao- Making a website</title>
+    <title>setti.net</title>
     <link rel="stylesheet" , href="style.css">
 </head>
 
