style sheet bugfix

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>setti.net</title>
-    <link rel="stylesheet" , href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body id="pagetop">
