adding cellular atomaton

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         </div>
     </div>
     <section class="intro">
+        <div id='atomaton' class='intro-background'></div>
         <div class="intro-content">
-            <h1>Hello World!</h1>
+                <h1>Hello World!</h1>
         </div>
     </section>
     <section class="projects" id="projects">
@@ -60,6 +61,9 @@
         &copy; Copyright 2010 by <a href="https://kedarisetti.github.io/">Kedarisetti</a>
     </div>
 
+    <script type="text/javascript" src="d3/d3.js"></script>
+    <script src="index.js">
+    </script>
 </body>
 
 </html>
